WDS przynajmniej zapisuje i jednocześnie serwuje pliki

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules
 *swp
 venv
 *log
+dist/*.js
+.awcache
 
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
